package Inmuebles;

public class CasaUrbana extends Casa {

    public CasaUrbana(int identificadorInmobiliario, int área, String dirección, int númeroHabitaciones, int númeroBaños, int númeroPisos) {
        super(identificadorInmobiliario, área, dirección, númeroHabitaciones, númeroBaños, númeroPisos);
    }

    @Override
    void imprimir() {
        super.imprimir();
    }
}
